--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {font-family: "Lato", sans-serif;}
 <body>
 
 <h2>Salsa Classes</h2>
-<p>Click on the buttons for the course contents</p>
+<p>Click on the buttons for the course contents.</p>
 <div id="content">
 <div id="tabs" class="tab">
 </div>
