--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {font-family: "Lato", sans-serif;}
   border: 1px solid #ccc;
   background-color: #f1f1f1;
   width: 200px;
-  height: 1000px;
+  height: 1100px;
 }
 
 /* Style the buttons inside the tab */
@@ -48,7 +48,7 @@ body {font-family: "Lato", sans-serif;}
   border: 1px solid #ccc;
   width: 800px;
   border-left: none;
-  height: 1000px;
+  height: 1100px;
 }
 
 #moves {
@@ -90,125 +90,261 @@ body {font-family: "Lato", sans-serif;}
 var courses = {
   "Basic 1" : 
     [
-	  { // 1:
-	    "footwork"   : [ "Side step", ""],
-		"partnerwork": [ "Basic step", ""],
-	  },
-	  { // 2:
-	    "footwork"   : [ "Left turn simplified", ""],
-		"partnerwork": [ "Left turn", ""],
-	  },
-	  { // 3:
-	    "footwork"   : [ "Macho step, right turn", ""],
-		"partnerwork": [ "Cross body", ""],
-	  },
-	  { // 4:
-	    "footwork"   : [ "Parabrisas / back basic", ""],
-		"partnerwork": [ "Combo with Caress", ""],
-	  },
-	  { // 5:
-	    "footwork"   : [ "Combo", ""],
-		"partnerwork": [ "Me and you", ""],
-	  },
-	  { // 6:
-	    "footwork"   : [ "Combo repeat", ""],
-		"partnerwork": [ "You and me", ""],
-	  },
-	],
+     { // 1:
+      "footwork"   : [ "Side step", ""],
+      "partnerwork": [ "Basic step", ""],
+     },
+     { // 2:
+      "footwork"   : [ "Left turn simplified", ""],
+      "partnerwork": [ "Left turn", ""],
+     },
+     { // 3:
+      "footwork"   : [ "Macho step, right turn", ""],
+      "partnerwork": [ "Cross body", ""],
+     },
+     { // 4:
+      "footwork"   : [ "Parabrisas / back basic", ""],
+      "partnerwork": [ "Combo with Caress", "https://photos.google.com/photo/AF1QipOkpmCAmo3eA_9aIZpvk-F7JOYEwixJHCm_ee7G"],
+     },
+     { // 5:
+      "footwork"   : [ "Combo", "https://photos.google.com/photo/AF1QipMFJP-5hopV1lV4LXptwqBQdN8UREk6v5TQbIem"],
+      "partnerwork": [ "Me and you", ""],
+     },
+     { // 6:
+      "footwork"   : [ "Combo repeat", ""],
+      "partnerwork": [ "You and me", "https://photos.google.com/photo/AF1QipN_1UgPvcFL1gCZUTwOO_kW_9z6M8Pd6s-DXpDW"],
+     },
+   ],
   "Basic 2" : 
     [
-	  { // 1:
-	    "footwork"   : [ "Left Turn", ""],
-		"partnerwork": [ "Enschufla", ""],
-	  },
-	  { // 2:
-	    "footwork"   : [ "Left tun varition", ""],
-		"partnerwork": [ "Enschufla with left turn", ""],
-	  },
-	  { // 3:
-	    "footwork"   : [ "Hook Turn", ""],
-		"partnerwork": [ "Enschufla with hook turn", ""],
-	  },
-	  { // 4:
-	    "footwork"   : [ "Suzy Q", ""],
-		"partnerwork": [ "Enschufla Double", ""],
-	  },
-	  { // 5:
-	    "footwork"   : [ "In-Out Suzy-Q", ""],
-		"partnerwork": [ "Hammerlock / Sedenta", ""],
-	  },
-	  { // 6:
-	    "footwork"   : [ "In-Out Step", ""],
-		"partnerwork": [ "Hamerlock + Caress", ""],
-	  },
-	],
+     { // 1:
+      "footwork"   : [ "Left Turn", "https://photos.google.com/photo/AF1QipPEeqoUV-Fi89iHmUo5acvKYatrcJZOFjto0eDW"],
+      "partnerwork": [ "Enschufla", "https://photos.google.com/photo/AF1QipMz79vgHPAUR3nI3oBAKCPzdZPuaLKeHkPQZ1nW"],
+     },
+     { // 2:
+      "footwork"   : [ "Left tun varition", ""],
+      "partnerwork": [ "Enschufla with left turn", "https://photos.google.com/photo/AF1QipOEfoVb_vYc4gRCoktEzNrfVoAkRaVC_Sl9JKOr"],
+     },
+     { // 3:
+      "footwork"   : [ "Hook Turn", ""],
+      "partnerwork": [ "Enschufla with hook turn", ""],
+     },
+     { // 4:
+      "footwork"   : [ "Suzy Q", ""],
+      "partnerwork": [ "Enschufla Double", ""],
+     },
+     { // 5:
+      "footwork"   : [ "In-Out Suzy-Q", ""],
+      "partnerwork": [ "Hammerlock / Sedenta", ""],
+     },
+     { // 6:
+      "footwork"   : [ "In-Out Step", ""],
+      "partnerwork": [ "Hamerlock + Caress", ""],
+     },
+   ],
   "Basic 3" : 
     [
-	  { // 1:
-	    "footwork"   : [ "Inside Turn", ""],
-		"partnerwork": [ "Sedenta / Hammerlock", "https://photos.google.com/photo/AF1QipP7paD45P5kXar-Dw4UBE0iMBg7Zli97mneux6N"],
-	  },
-	  { // 2:
-	    "footwork"   : [ "Inside Turn Repeat", ""],
-		"partnerwork": [ "Inside Turn Combi", ""],
-	  },
-	  { // 3:
-	    "footwork"   : [ "Outside Turn", ""],
-		"partnerwork": [ "Inside Turn Combi 2", ""],
-	  },
-	  { // 4:
-	    "footwork"   : [ "Outside Turn Repeat", ""],
-		"partnerwork": [ "Outside Turn", ""],
-	  },
-	  { // 5:
-	    "footwork"   : [ "Side Suzy Q", ""],
-		"partnerwork": [ "Outside Turn", ""],
-	  },
-	  { // 6:
-	    "footwork"   : [ "El Lado Suzy Q", ""],
-		"partnerwork": [ "Outside Turn Combination", ""],
-	  },
-	],
+     { // 1:
+      "footwork"   : [ "Inside Turn", "https://photos.google.com/photo/AF1QipMivqtifJhCjNi2F0clDv5sJnWD223DS3ZygBDx"],
+      "partnerwork": [ "Sedenta / Hammerlock", "https://photos.google.com/photo/AF1QipP7paD45P5kXar-Dw4UBE0iMBg7Zli97mneux6N"],
+     },
+     { // 2:
+      "footwork"   : [ "Inside Turn Repeat", ""],
+      "partnerwork": [ "Inside Turn Combi", ""],
+     },
+     { // 3:
+      "footwork"   : [ "Outside Turn", ""],
+      "partnerwork": [ "Inside Turn Combi 2", ""],
+     },
+     { // 4:
+      "footwork"   : [ "Outside Turn Repeat", ""],
+      "partnerwork": [ "Outside Turn", ""],
+     },
+     { // 5:
+      "footwork"   : [ "Side Suzy Q", ""],
+      "partnerwork": [ "Outside Turn", ""],
+     },
+     { // 6:
+      "footwork"   : [ "El Lado Suzy Q", ""],
+      "partnerwork": [ "Outside Turn Combination", ""],
+     },
+   ],
   "Basic 4" : 
     [
-	  { // 1:
-	    "footwork"   : [ "Side step", ""],
-		"partnerwork": [ "Basic step", ""],
-	  },
-	  { // 2:
-	    "footwork"   : [ "Left turn simplified", ""],
-		"partnerwork": [ "Left turn", ""],
-	  },
-	  { // 3:
-	    "footwork"   : [ "Macho step, right turn", ""],
-		"partnerwork": [ "Cross body", ""],
-	  },
-	  { // 4:
-	    "footwork"   : [ "Parabrisas / back basic", ""],
-		"partnerwork": [ "Combo with Caress", ""],
-	  },
-	  { // 5:
-	    "footwork"   : [ "Combo", ""],
-		"partnerwork": [ "Me and you", ""],
-	  },
-	  { // 6:
-	    "footwork"   : [ "Combo repeat", ""],
-		"partnerwork": [ "You and me", ""],
-	  },
-	],
+     { // 1:
+      "footwork"   : [ "Guapea", "https://photos.google.com/photo/AF1QipNMYuLfY0RfJFi15_ztoGl4Ai0czj_JS8mEFXY0"],
+      "partnerwork": [ "Basic Pizza", ""],
+     },
+     { // 2:
+      "footwork"   : [ "Guapea with tap", ""],
+      "partnerwork": [ "Shoulder stop", "https://photos.google.com/photo/AF1QipNAlzmxlMjfNrjmkaX-crNwqW6FROikASqofkt1"],
+     },
+     { // 3:
+      "footwork"   : [ "Guapea with tap and kick", ""],
+      "partnerwork": [ "Titanic", ""],
+     },
+     { // 4:
+      "footwork"   : [ "Half side turn", ""],
+      "partnerwork": [ "Shoulder neck", ""],
+     },
+     { // 5:
+      "footwork"   : [ "Full Side turn / El lado turn", ""],
+      "partnerwork": [ "Drop n catch", ""],
+     },
+     { // 6:
+      "footwork"   : [ "Suzy Q lapas", "https://photos.google.com/photo/AF1QipMHV4OqJeWcAK7JZ55ATwo6WoCo8-7VubRFH09b"],
+      "partnerwork": [ "Drop n catch, stop n go", ""],
+     }],
+     "Intermediate 1" : 
+     [{ // 1:
+      "footwork"   : [ "Double walk", "https://photos.google.com/photo/AF1QipMTpbZa8Ah9xlQJvxuKq76ELAlJ5jXj0pC-3lPu"],
+      "partnerwork": [ "Koppa", "https://photos.google.com/photo/AF1QipN6XC6MGf2NuiMjadeoAnSXVznITAP8yGAhEJSK"],
+     },
+     { // 2:
+      "footwork"   : [ "Ochos", ""],
+      "partnerwork": [ "Zorro", ""],
+     },
+     { // 3:
+      "footwork"   : [ "Double Walk", ""],
+      "partnerwork": [ "Sedenta con Wrap", ""],
+     },
+     { // 4:
+      "footwork"   : [ "Ochos", ""],
+      "partnerwork": [ "Caracoll", "https://photos.google.com/photo/AF1QipNBVWzq6n0xwSN3uCtPUTNw97MHKXedJ7nMa4sV"],
+     },
+     { // 5:
+      "footwork"   : [ "Full Side turn / El lado turn", ""],
+      "partnerwork": [ "Drop n catch", ""],
+     },
+     { // 6:
+      "footwork"   : [ "Suzy Q lapas", ""],
+      "partnerwork": [ "Drop n catch, stop n go", ""],
+     }
+     ]
+     ,
+     "Intermediate 2" : 
+     [
+      {"footwork" : [ "V-Step  ", "https://photos.google.com/photo/AF1QipMaYjiQWO1XyCvROcdLmUExbFpR680w_u2qbT7M"],"partnerwork": [ "Double Walk Basic", "https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0"]},
+      {"footwork" : [ "        ", ""],"partnerwork": [ "Don Simon", ""]},
+      {"footwork" : [ "Double Left", "https://photos.google.com/photo/AF1QipO-GE9Ei_98yYwRf2dezabu6WGbv1zNf1o5ROJ4"],  "partnerwork": [ "Don Simon v2", "https://photos.google.com/photo/AF1QipNCNQmMlibjZ2pRt_58pcb4G7NTFSkhBMDa5I8Z"]},
+      {"footwork" : [ "Half Left Half Right", ""],"partnerwork": [ "Sedenta con wrap", "https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl"]},
+      {"footwork" : [ "Full Side turn / El lado turn", ""], "partnerwork": [ "Drop n catch", ""]},
+      {"footwork" : [ "Suzy Q lapas", ""],"partnerwork": [ "Drop n catch, stop n go", ""]}
+     ],
+     "Intermediate 3" : 
+     [
+      /*I3-1*/{"footwork" : [ "Inside Tap", "https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0"],"partnerwork": [ "U-Shaped Double Turn", ""]},
+      /*I3-2*/{"footwork" : [ "", ""],"partnerwork": [ "Rexona V2", "https://photos.google.com/photo/AF1QipMN0V2szaGYqlWYiRrCPFgcM6e6VqZ8KZ6WVqDC"]},
+      /*I3-3*/{"footwork" : [ "", ""],"partnerwork": [ "Fly", "https://photos.google.com/photo/AF1QipNx0-8czKlzj9pPPcAypl1ndjurR0RcvQua09QX"]},
+      /*I3-4*/{"footwork" : [ "", ""],"partnerwork": [ "Titanic v2", "https://photos.google.com/photo/AF1QipNgzSbaqsaEj_4MBFy1tL4Wkoldrq81Mp6U3mlT"]},
+      /*I3-5*/{"footwork" : [ "", ""],"partnerwork": [ "Open Outside", "https://photos.google.com/photo/AF1QipOsWFU5qToNMaRVLmhsvtmrZoCrk96HsuH4YxAo"]},
+      /*I3-6*/{"footwork" : [ "???", "https://photos.google.com/photo/AF1QipP2FOEVPURrMQJsfiIiYMPSqr8Y1kwTNzIkoxtq"],"partnerwork": [ "Open Outside + Rexona", "https://photos.google.com/photo/AF1QipM9qimkGDO8yiXiGBJVCvI76L7DU0DzBFiuEQDL"]},
+      /*I3-6*/{"footwork" : [ "Left-Right Pivor", "https://photos.google.com/photo/AF1QipPokJ1cEnsey6o5o6CL9ZnS6z9hPiHLspOHjx-Q"],"partnerwork": [ "Paperclip", "https://photos.google.com/photo/AF1QipM7L-mbwbc3a6CoQbmCq7itf4EVIphEZ3wn6NjB"]},
+     ],
+     "Intermediate 4" : [ 
+      /*I4-1*/{"footwork" : [ "Basic + Suzy-Q on-2", ""],"partnerwork": [ "On 2: Combo", ""]},
+      /*I4-2*/{"footwork" : [ "Mambo Step on-2", ""],"partnerwork": [ "On 2: Nico", ""]},
+      /*I4-3*/{"footwork" : [ "Hook Step", ""],"partnerwork": [ "Drop'n Flick", ""]},
+      /*I4-4*/{"footwork" : [ "Inside Tap", "https://photos.google.com/photo/AF1QipPj7BKFBpChez8v0_E4r7NjP_ZTT_5PPkTCpTyw"],"partnerwork": [ "Nico's Paperclip", "https://photos.google.com/photo/AF1QipMsHvcElCh9R5MaMY0BOL2ye5BGem0LszMwg96H"]},
+      /*I4-5*/{"footwork" : [ "Rincon", "https://photos.google.com/photo/AF1QipMtNWMOACl6JGeCQP6McOt42XOHLM7LtfJIsEgC"],"partnerwork": [ "?", ""]},
+      /*I4-6*/{"footwork" : [ "Inside Tap", ""],"partnerwork": [ "?", ""]},
+     ],
+     "Advanced 1" : 
+     [ 
+      /*A1-1*/{"footwork" : [ "Palma", "https://photos.google.com/photo/AF1QipOqJUZr_EgPtLAYCUFL1_RnWASo4tDEI_VRxCcf"],"partnerwork": [ "Tommorow Land", "https://photos.google.com/photo/AF1QipNPQT_FD3rc3lZxNTzrWuHNOupHwQ1l1_vlTwCE"]},
+      /*A1-2*/{"footwork" : [ "Front walk", "https://photos.google.com/photo/AF1QipNTzyY1YW2lt0nyunUpKGPOATffZZZ7R6OUNKSM"],"partnerwork": [ "Gancho", "https://photos.google.com/photo/AF1QipM2EV9uUDDXj844k2s_MudMXodTzpCfipGxB-Dk"]},
+      /*A1-3*/{"footwork" : [ "Suzy Turn", "https://photos.google.com/photo/AF1QipNMIIJu3P0DdIqJmoyflnzCCexOOcmGQcasSU7I"],"partnerwork": [ "Gancho + 360", "https://photos.google.com/photo/AF1QipN8SwVqoBxMHZ4OoOIW-jLCYee-dawf9b5Yik79"]},
+      /*A1-4*/{"footwork" : [ "?", ""],"partnerwork": [ "Cambiasso", "https://photos.google.com/photo/AF1QipNTzyY1YW2lt0nyunUpKGPOATffZZZ7R6OUNKSM"]},
+      /*A1-5*/{"footwork" : [ "?", ""],"partnerwork": [ "Inside Man", ""]},
+      /*A1-6*/{"footwork" : [ "?", ""],"partnerwork": [ "Ancensor", "https://photos.google.com/photo/AF1QipNu6Bf3Ar0HJUPrIrTOHEwfPEKhkciu1i-72QtM"]},
+      /*A1-7*/{"footwork" : [ "Ascensor + Inside Man + Gancho [HD]", "https://photos.google.com/photo/AF1QipOGaiCkgVtJFVX9oCZRmxAn8oIHoI7al9W8j1lJ"],"partnerwork": [ "Ascensor + Inside Man + Gancho", "https://photos.google.com/photo/AF1QipMxT4MqyojlU8iKvW2bWJcJAKR_i7Jr4SAvsz1N"]},
+     ],
+     "Advanced 2" : 
+     [
+      /*A2-1*/{"footwork" : [ "Togoman", ""],   "partnerwork": [ "Torremolinas", ""]},
+      /*A2-2*/{"footwork" : [ "Togoman v2", "https://photos.google.com/photo/AF1QipOeXSbijufJUXnu9zMW9RJeP3O49YStgUo2a-qU"],"partnerwork": [ "Torremolinas v2", "https://photos.google.com/photo/AF1QipM0b36G48pGotg_gXxKOZ5w1Pu5lD7-BJ4_pEr7"]},
+     ],
+     "Advanced 3" : 
+     [
+     ],
+     "Advanced 4" : 
+     [
+     ],
+     "Master 1" : 
+     [
+     ]
+     ,
+     "Master 2" : 
+     [
+     ],
+     "Master 3" : 
+     [
+     ],
+     "Master 4" : 
+     [
+     ],
+     "Workshops": 
+     [
+      { // Basic Pachanga Workshop :
+      "footwork"   : [ "Basic Pachanga Workshop", "https://photos.google.com/photo/AF1QipNkHu1Z3X9ecdE6-vSVWQq_DY1JFXnJxyCVrJ_3"],
+      "partnerwork": [ "With music: Seo Fernandez - Llegò la Pachanga", "https://photos.google.com/photo/AF1QipNCTnpOS9skeNn6y8tb4vxSfmPDK7sEoTDkQkV7"],
+      },
+      { // Mambo Footwork Workshop:
+      "footwork"   : [ "Mambo Footwork Workshop", "https://photos.google.com/photo/AF1QipOlg5uDp32e06tLW0jwE_PAEurpU1kbzQ24DaUA"],
+      "partnerwork": [ "With music: Azuquita pa'l cafe", "https://photos.google.com/photo/AF1QipP6X7S09VkqzA5-4_ldDUHif7SO4q6nX2i1WNZ0"],
+      },
+      { // Boogaloo (Chiara Tofani):
+      "footwork"   : [ "Boogaloo (Chiara Tofani)", "https://photos.google.com/photo/AF1QipP26hrEkD-0xGp2e8OGnuPa_b9aP3iyCsIo8-Aq"],
+      "partnerwork": [ "With music: Spanglish Fly - The Po-Po", "https://photos.google.com/photo/AF1QipM6WN1Alrrs9AnpBZQT_Z4KDGj1H7FSQj-6f5i3"],
+      },
+      { // Salsa Fusion (Chiara Tofani):
+      "footwork"   : [ "Salsa Fusion (Chiara Tofani)", "https://photos.google.com/photo/AF1QipNx2nr5Vd29a9-mccXtUq-HXSJsbaSsuc2SWwKD"],
+      "partnerwork": [ "With music: Vente Negra", "https://photos.google.com/photo/AF1QipObATVHepmRywnosURCDO6D5V4eCpUh2xuVLhT-"],
+      },
+      { // Salsa Footwork (Russian dude):
+      "footwork"   : [ "Salsa Footwork Workshop", "https://photos.google.com/photo/AF1QipNVUr6rkEIL0p1hpvBfH3ErRdOlJdNgeGfAdSYS"],
+      "partnerwork": [ "With music: DF RaFF - La tristeza de invierno", "https://photos.google.com/photo/AF1QipPjG_tTlCvmzbj_ftCNSJdEyOo_i2gzQbbgdblz"],
+      },
+      { // Salsa Musicality Workshop (Angelo Rito):
+      "footwork"   : [ "Salsa Musicality Workshop (Angelo Rito)", "https://photos.google.com/photo/AF1QipM1W4vYXto9jG6oWonESikIkgxCzg6P8h5LHdbG"],
+      "partnerwork": [ "", ""],
+      },
+      { // Salsa Musicality Bootcamp (Angelo Rito):
+      "footwork"   : [ "Salsa Musicality Bootcamp (Angelo Rito)", "https://photos.google.com/photo/AF1QipNyCy4Mn29tqnlYKDomgC-Kkzc_MHY7HFOoUIsv"],
+      "partnerwork": [ "With music: Alfredo Rodriguez Duologue", "https://photos.google.com/photo/AF1QipNpRewDuhvKaVaMhie1nHKrINF9artY2OxOQ1Xl"],
+      },
+    ],
+   }
+
+function isBlank(str){
+    return (!!!str || /^\s*$/.test(str));
 }
 
-// Create the content
-
-// add tabs and content:
+// Create the content - add tabs and content:
 Object.keys(courses).forEach(key=>
 {
   $('#tabs').append($("<button id='"+key+" Tab' class='tablinks' onclick=\"openCity(event, '"+key+"')\">"+key+"</button>"));    
   
   var nr=0;
-  var table = '<table id="moves"><tr><th style="width:35px;">#<th style="width:250px;">Footwork<th style="width:250px;">Partnerwork';
-  courses[key].forEach( item => table = table + "<tr><td>"+(++nr)+"<td><a target='_blank' href='"+item.footwork[1]+"'>"+item.footwork[0] + "</a><td><a target='_blank' href='"+item.partnerwork[1]+"'>"+item.partnerwork[0] + "</a>");
-  table = table + "</table>";
+  var table = '<table id="moves"><tr><th style="width:35px;">#<th style="width:250px;"><th style="width:250px;">';
+  courses[key].forEach( item => {
+    table = table + "<tr><td>"+(++nr);
+    
+    if (isBlank(item.footwork[1])){
+        table = table + "<td>" + item.footwork[0] + "</td>";
+    }
+    else {
+        table = table + "<td>" + "<a target='_blank' href='"+item.footwork[1]+"'>"+item.footwork[0] + "</a>" + "</td>";
+    }
+    
+    if (isBlank(item.partnerwork[1])){
+        table = table + "<td>" + item.partnerwork[0] + "</td>";
+    }
+    else {
+        table = table + "<td><a target='_blank' href='"+item.partnerwork[1]+"'>"+item.partnerwork[0] + "</a></td>";
+    }
+  });
+    table = table + "</table>";
   
   $('#content').append($('<div style="display:none;" id="'+key+'" class="tabcontent"><h3>'+key+'</h3>' + table +'</div>'));
   
