--- a/index.html
+++ b/index.html
@@ -119,50 +119,54 @@ var courses = {
     [
      { // 1:
       "footwork"   : [ "Left Turn", "https://photos.google.com/photo/AF1QipPEeqoUV-Fi89iHmUo5acvKYatrcJZOFjto0eDW"],
-      "partnerwork": [ "Enschufla", "https://photos.google.com/photo/AF1QipMz79vgHPAUR3nI3oBAKCPzdZPuaLKeHkPQZ1nW"],
+      "partnerwork": [ "Enschufla", "https://photos.google.com/photo/AF1QipMz79vgHPAUR3nI3oBAKCPzdZPuaLKeHkPQZ1nW"], //https://photos.google.com/photo/AF1QipPazTzvfkIbvNDoW8RIHVJ9MyrQq98ijwO9S9sI
      },
-     { // 2:
-      "footwork"   : [ "Left tun varition", ""],
+     { // 2: 
+      "footwork"   : [ "In Out Suzy Q", "https://photos.google.com/photo/AF1QipP2NstuNpwEAh9UKiXHfslzSuek_bhMfizZZXQ-"], //https://photos.google.com/photo/AF1QipO4nPZQEy1xNbMB69ZmTQl4n_Dvqw56SvSzZJC7
       "partnerwork": [ "Enschufla with left turn", "https://photos.google.com/photo/AF1QipOEfoVb_vYc4gRCoktEzNrfVoAkRaVC_Sl9JKOr"],
-     },
+     }, 
+     { // 3:
+      "footwork"   : [ "Left tun varition", ""],
+      "partnerwork": [ "Enschufla with caress", "https://photos.google.com/photo/AF1QipNdnfFjtf9wIRSWpswjuygN1xr7glFgK4X99FlD"],
+     }, 
      { // 3:
       "footwork"   : [ "Hook Turn", ""],
-      "partnerwork": [ "Enschufla with hook turn", ""],
+      "partnerwork": [ "Enschufla with hook turn", "https://photos.google.com/photo/AF1QipMO6twHZwxn7jOtGfDC4XYrwA8x8G4_UVB1v4Wt"],
      },
      { // 4:
-      "footwork"   : [ "Suzy Q", ""],
-      "partnerwork": [ "Enschufla Double", ""],
-     },
-     { // 5:
-      "footwork"   : [ "In-Out Suzy-Q", ""],
-      "partnerwork": [ "Hammerlock / Sedenta", ""],
+      "footwork"   : [ "Suzy Q", "https://photos.google.com/photo/AF1QipN0v-itjdcy273vnLdgRHVY5bhGB8uK5cRJqaI9"],
+      "partnerwork": [ "Enschufla Double", "https://photos.google.com/photo/AF1QipN0v-itjdcy273vnLdgRHVY5bhGB8uK5cRJqaI9"],
      },
      { // 6:
       "footwork"   : [ "In-Out Step", ""],
-      "partnerwork": [ "Hamerlock + Caress", ""],
+      "partnerwork": [ "Enschufla Triple", "https://photos.google.com/photo/AF1QipNyMB4LvK5PbA5hFQdwu4UIhju8F3f2tfp51LNU"],
+     },
+     { //76:
+      "footwork"   : [ "In-Out Step", ""],
+      "partnerwork": [ "Right turn for the lady", "https://photos.google.com/photo/AF1QipPLPu3RinCk4RPfUqsz0tJpJ9NE_e1Wc7Ua1BEz"],
      },
    ],
   "Basic 3" : 
     [
      { // 1:
-      "footwork"   : [ "Inside Turn", "https://photos.google.com/photo/AF1QipMivqtifJhCjNi2F0clDv5sJnWD223DS3ZygBDx"],
-      "partnerwork": [ "Sedenta / Hammerlock", "https://photos.google.com/photo/AF1QipP7paD45P5kXar-Dw4UBE0iMBg7Zli97mneux6N"],
+      "footwork"   : [ "Inside Turn", "https://photos.google.com/photo/AF1QipMivqtifJhCjNi2F0clDv5sJnWD223DS3ZygBDx"], //https://photos.google.com/photo/AF1QipOX33qvXhmjo8BJxaAoG11WDMBZC2mslSoMXNNA https://photos.google.com/photo/AF1QipO626Ra8XV118wb-9oMoUeQYM-pySMJ-9Fa5E7u 
+      "partnerwork": [ "Inside Turn", "https://photos.google.com/photo/AF1QipP7paD45P5kXar-Dw4UBE0iMBg7Zli97mneux6N"], //https://photos.google.com/photo/AF1QipPlefjwY6uVimZHY0AgqggRs1NWu_28TQw9GEqe https://photos.google.com/photo/AF1QipO4nPZQEy1xNbMB69ZmTQl4n_Dvqw56SvSzZJC7
      },
      { // 2:
-      "footwork"   : [ "Inside Turn Repeat", ""],
-      "partnerwork": [ "Inside Turn Combi", ""],
+      "footwork"   : [ "Inside Turn", "https://photos.google.com/photo/AF1QipPPKWaqC3vsSniyfNOYVeh1tE-p5fpjko2rspqt"], //https://photos.google.com/photo/AF1QipMQAvMi3ueey9_Ls78rgkVzLR34poJBNAN6QBUV
+      "partnerwork": [ "Shoulder out", "https://photos.google.com/photo/AF1QipNSNa1xr0lWVglgB-reaXYxyOuJ0Z9A7alcprPi"],
      },
      { // 3:
       "footwork"   : [ "Outside Turn", ""],
-      "partnerwork": [ "Inside Turn Combi 2", ""],
+      "partnerwork": [ "Sedenta + hook", "https://photos.google.com/photo/AF1QipM1onJaGjEQgOlv80wN0PJ6huugWZGk7j9sWrDp"],
      },
      { // 4:
       "footwork"   : [ "Outside Turn Repeat", ""],
-      "partnerwork": [ "Outside Turn", ""],
+      "partnerwork": [ "Outside Turn", "https://photos.google.com/photo/AF1QipM8C16uLw4GqBxa3FJBpPmT5tRi0BxNM8nGLfnU"],
      },
      { // 5:
       "footwork"   : [ "Side Suzy Q", ""],
-      "partnerwork": [ "Outside Turn", ""],
+      "partnerwork": [ "Shoulder neck", "https://photos.google.com/photo/AF1QipN0uBJA0lqgo6bu0UJ7tBmVAoora0nLKYyRUXF6"],
      },
      { // 6:
       "footwork"   : [ "El Lado Suzy Q", ""],
@@ -171,9 +175,13 @@ var courses = {
    ],
   "Basic 4" : 
     [
+     { // 0:
+      "footwork"   : [ "", ""],
+      "partnerwork": [ "Open Cross-Body", "https://photos.google.com/photo/AF1QipPBRCnQemQr-LaK4ChYzIo5dx6N0tV7lcUUBFiF"],
+     },
      { // 1:
-      "footwork"   : [ "Guapea", "https://photos.google.com/photo/AF1QipNMYuLfY0RfJFi15_ztoGl4Ai0czj_JS8mEFXY0"],
-      "partnerwork": [ "Basic Pizza", ""],
+      "footwork"   : [ "Guapea", "https://photos.google.com/photo/AF1QipNMYuLfY0RfJFi15_ztoGl4Ai0czj_JS8mEFXY0"], //https://photos.google.com/photo/AF1QipPP3d1hhXQSIwj8tEDu7GDCftxgwoUW8aUtlUVZ https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi
+      "partnerwork": [ "Basic Pizza", "https://photos.google.com/photo/AF1QipM9rFCjfr14UFaQsvzA_5sZw3hAVH7PHAt_0SX1"], //https://photos.google.com/photo/AF1QipOYW2vXUw5ws8LvU7uVGujWdgue1F7oy_pSlsSC https://photos.google.com/photo/AF1QipMGKMiNPPJJPADMhgq5UvWaRDz-bExDaBfOkfM2 https://photos.google.com/photo/AF1QipPUKQuussLejjk887-dMeJ3SXfGHEmr1Xeshy8A
      },
      { // 2:
       "footwork"   : [ "Guapea with tap", ""],
@@ -181,24 +189,24 @@ var courses = {
      },
      { // 3:
       "footwork"   : [ "Guapea with tap and kick", ""],
-      "partnerwork": [ "Titanic", ""],
+      "partnerwork": [ "Titanic", "https://photos.google.com/photo/AF1QipPcrrBSAW9-5c7bzTfN2BULcTxHM8NY08iezIx7"], //https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi
      },
      { // 4:
-      "footwork"   : [ "Half side turn", ""],
+      "footwork"   : [ "Half side turn", "https://photos.google.com/photo/AF1QipMO39G_VY9gkHXoZEkrvf8qKO6F8yviQU_21To_"], //https://photos.google.com/photo/AF1QipP0aLZTHY_uc-lJPKKS-C1Pr37wHChgf_VGN2H2
       "partnerwork": [ "Shoulder neck", ""],
      },
      { // 5:
       "footwork"   : [ "Full Side turn / El lado turn", ""],
-      "partnerwork": [ "Drop n catch", ""],
+      "partnerwork": [ "Drop n catch", "https://photos.google.com/photo/AF1QipPBcPFQDsxfqJSIZlDMgm4JwCb-j0meeVvd5viK"],
      },
      { // 6:
       "footwork"   : [ "Suzy Q lapas", "https://photos.google.com/photo/AF1QipMHV4OqJeWcAK7JZ55ATwo6WoCo8-7VubRFH09b"],
-      "partnerwork": [ "Drop n catch, stop n go", ""],
+      "partnerwork": [ "Drop n catch, stop n go", "https://photos.google.com/photo/AF1QipPjn99vfOsUnbN8kUuWHiRJJ1sagp_FaYOvLO-w"], //https://photos.google.com/photo/AF1QipPWvJ7mjBMVhgJFayslxXjqX0MGP-EQet4zF7Uk
      }],
      "Intermediate 1" : 
      [{ // 1:
       "footwork"   : [ "Double walk", "https://photos.google.com/photo/AF1QipMTpbZa8Ah9xlQJvxuKq76ELAlJ5jXj0pC-3lPu"],
-      "partnerwork": [ "Koppa", "https://photos.google.com/photo/AF1QipN6XC6MGf2NuiMjadeoAnSXVznITAP8yGAhEJSK"],
+      "partnerwork": [ "Koppa", "https://photos.google.com/photo/AF1QipN6XC6MGf2NuiMjadeoAnSXVznITAP8yGAhEJSK"], // https://photos.google.com/photo/AF1QipObdSl7jPHYLq0d1X82mifEzi-FyUAhqK9bJzK2 https://photos.google.com/photo/AF1QipMnfxfOETbI7t_31olgs1D8ulxYZFffbJ2_H41- https://photos.google.com/photo/AF1QipMwSzWh4scecS1DVeHCq2qnXexuO2sBGatY0t5C https://photos.google.com/photo/AF1QipN8HDKHDWwR4ywK_kVvUUaXKfQZ3AKA_bCroOP3
      },
      { // 2:
       "footwork"   : [ "Ochos", ""],
@@ -214,7 +222,7 @@ var courses = {
      },
      { // 5:
       "footwork"   : [ "Full Side turn / El lado turn", ""],
-      "partnerwork": [ "Drop n catch", ""],
+      "partnerwork": [ "Drop n catch", "https://photos.google.com/photo/AF1QipPJ4sJEy0GaxYySLIovA-rk0IYO_jYiAtciCbA4"],
      },
      { // 6:
       "footwork"   : [ "Suzy Q lapas", ""],
@@ -224,18 +232,18 @@ var courses = {
      ,
      "Intermediate 2" : 
      [
-      {"footwork" : [ "V-Step  ", "https://photos.google.com/photo/AF1QipMaYjiQWO1XyCvROcdLmUExbFpR680w_u2qbT7M"],"partnerwork": [ "Double Walk Basic", "https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0"]},
+      {"footwork" : [ "V-Step  ", "https://photos.google.com/photo/AF1QipMaYjiQWO1XyCvROcdLmUExbFpR680w_u2qbT7M"] /* https://photos.google.com/photo/AF1QipN8HDKHDWwR4ywK_kVvUUaXKfQZ3AKA_bCroOP3 */,"partnerwork": [ "Double Walk Basic", "https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0"]},
       {"footwork" : [ "        ", ""],"partnerwork": [ "Don Simon", ""]},
-      {"footwork" : [ "Double Left", "https://photos.google.com/photo/AF1QipO-GE9Ei_98yYwRf2dezabu6WGbv1zNf1o5ROJ4"],  "partnerwork": [ "Don Simon v2", "https://photos.google.com/photo/AF1QipNCNQmMlibjZ2pRt_58pcb4G7NTFSkhBMDa5I8Z"]},
+      {"footwork" : [ "Double Left", "https://photos.google.com/photo/AF1QipO-GE9Ei_98yYwRf2dezabu6WGbv1zNf1o5ROJ4"] /* https://photos.google.com/photo/AF1QipMwSzWh4scecS1DVeHCq2qnXexuO2sBGatY0t5C */,  "partnerwork": [ "Don Simon v2", "https://photos.google.com/photo/AF1QipNCNQmMlibjZ2pRt_58pcb4G7NTFSkhBMDa5I8Z"]},
       {"footwork" : [ "Half Left Half Right", ""],"partnerwork": [ "Sedenta con wrap", "https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl"]},
       {"footwork" : [ "Full Side turn / El lado turn", ""], "partnerwork": [ "Drop n catch", ""]},
-      {"footwork" : [ "Suzy Q lapas", ""],"partnerwork": [ "Drop n catch, stop n go", ""]}
+      {"footwork" : [ "Suzy Q lapas", "https://photos.google.com/photo/AF1QipP8GkRThTqeX2JGHL1Aj9YwV-sPpPc38oTVWVdD"],"partnerwork": [ "Drop n catch, stop n go", ""]}
      ],
      "Intermediate 3" : 
      [
       /*I3-1*/{"footwork" : [ "Inside Tap", "https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0"],"partnerwork": [ "U-Shaped Double Turn", ""]},
       /*I3-2*/{"footwork" : [ "", ""],"partnerwork": [ "Rexona V2", "https://photos.google.com/photo/AF1QipMN0V2szaGYqlWYiRrCPFgcM6e6VqZ8KZ6WVqDC"]},
-      /*I3-3*/{"footwork" : [ "", ""],"partnerwork": [ "Fly", "https://photos.google.com/photo/AF1QipNx0-8czKlzj9pPPcAypl1ndjurR0RcvQua09QX"]},
+      /*I3-3*/{"footwork" : [ "", ""],"partnerwork": [ "Fly", "https://photos.google.com/photo/AF1QipNx0-8czKlzj9pPPcAypl1ndjurR0RcvQua09QX"]}, // https://photos.google.com/photo/AF1QipMen7FqbAFGnyTPYfJzkddRyJZpXkFXShmZ1piV
       /*I3-4*/{"footwork" : [ "", ""],"partnerwork": [ "Titanic v2", "https://photos.google.com/photo/AF1QipNgzSbaqsaEj_4MBFy1tL4Wkoldrq81Mp6U3mlT"]},
       /*I3-5*/{"footwork" : [ "", ""],"partnerwork": [ "Open Outside", "https://photos.google.com/photo/AF1QipOsWFU5qToNMaRVLmhsvtmrZoCrk96HsuH4YxAo"]},
       /*I3-6*/{"footwork" : [ "???", "https://photos.google.com/photo/AF1QipP2FOEVPURrMQJsfiIiYMPSqr8Y1kwTNzIkoxtq"],"partnerwork": [ "Open Outside + Rexona", "https://photos.google.com/photo/AF1QipM9qimkGDO8yiXiGBJVCvI76L7DU0DzBFiuEQDL"]},
@@ -243,8 +251,8 @@ var courses = {
      ],
      "Intermediate 4" : [ 
       /*I4-1*/{"footwork" : [ "Basic + Suzy-Q on-2", ""],"partnerwork": [ "On 2: Combo", ""]},
-      /*I4-2*/{"footwork" : [ "Mambo Step on-2", ""],"partnerwork": [ "On 2: Nico", ""]},
-      /*I4-3*/{"footwork" : [ "Hook Step", ""],"partnerwork": [ "Drop'n Flick", ""]},
+      /*I4-2*/{"footwork" : [ "Mambo Step on-2", "https://photos.google.com/photo/AF1QipNX4qKjVB9tFiSlRRrfNt3Hr8_JhtDQfHqOWlND"],"partnerwork": [ "On 2: Nico", ""]},
+      /*I4-3*/{"footwork" : [ "Hook Step", "https://photos.google.com/photo/AF1QipOB29Hm3cJwraDN3d82mJTx_Ed39c584k1s5U5N"],"partnerwork": [ "Drop'n Flick", "https://photos.google.com/photo/AF1QipOwzFW72U10sX6eh_cpddcz6k5P_Yr76TE_Mk5-"]},
       /*I4-4*/{"footwork" : [ "Inside Tap", "https://photos.google.com/photo/AF1QipPj7BKFBpChez8v0_E4r7NjP_ZTT_5PPkTCpTyw"],"partnerwork": [ "Nico's Paperclip", "https://photos.google.com/photo/AF1QipMsHvcElCh9R5MaMY0BOL2ye5BGem0LszMwg96H"]},
       /*I4-5*/{"footwork" : [ "Rincon", "https://photos.google.com/photo/AF1QipMtNWMOACl6JGeCQP6McOt42XOHLM7LtfJIsEgC"],"partnerwork": [ "?", ""]},
       /*I4-6*/{"footwork" : [ "Inside Tap", ""],"partnerwork": [ "?", ""]},
@@ -285,6 +293,22 @@ var courses = {
      ],
      "Workshops": 
      [
+      { // FW on-1 (Panagiotis) :
+      "footwork"   : [ "Foorwork on-1 2023 (Panagiotis&Myrto)", "https://photos.google.com/photo/AF1QipOp5BbIAt1LYhngqlCLoUWEZvqI02BcYIrsOkr3"],
+      "partnerwork": [ "With music", "https://photos.google.com/photo/AF1QipPYdUPsodqwCRNKRBkBzZZ-6avCRpeacnOI8a_V"],
+      },
+      { // Partnerwork on-1 (Panagiotis) :
+      "footwork"   : [ "Partnerwork on-1 2023/2 (Panagiotis&Myrto)", "https://photos.google.com/photo/AF1QipPYAnjsbxSX3BP3PY4sV-zGj2PQbsFD1Gbk2iZc"],
+      "partnerwork": [ "With music", "https://photos.google.com/photo/AF1QipOp6UQWaHbo9EySCa-TbPk4Wv9vOfWXN5BHgoQh"],
+      },
+      { // Partnerwork on-1 (Panagiotis) :
+      "footwork"   : [ "Partnerwork on-1 2023/1 (Panagiotis&Myrto)", "https://photos.google.com/photo/AF1QipO59Zg6HQ5PanfPvikKfJ_Ku2Acqn0fsWQmV_gH"],
+      "partnerwork": [ "With music", "https://photos.google.com/photo/AF1QipN8htOcX8F2mMdJO_av7pvqYAX27cSDNcpYHfbC"],
+      },
+      { // Foorwork on-2 (Panagiotis) :
+      "footwork"   : [ "Foorwork on-2 2023 (Panagiotis&Myrto)", "https://photos.google.com/photo/AF1QipMjNScPgblG3UAFlpDADuw4KiTpRg29sxce4IOe"],
+      "partnerwork": [ "With music", "https://photos.google.com/photo/AF1QipP698CRpTIAexQqBK_hFLG6y1fy2nFACa-FL_8l"],
+      }
       { // Basic Pachanga Workshop :
       "footwork"   : [ "Basic Pachanga Workshop", "https://photos.google.com/photo/AF1QipNkHu1Z3X9ecdE6-vSVWQq_DY1JFXnJxyCVrJ_3"],
       "partnerwork": [ "With music: Seo Fernandez - Llegò la Pachanga", "https://photos.google.com/photo/AF1QipNCTnpOS9skeNn6y8tb4vxSfmPDK7sEoTDkQkV7"],
