Fixed Inside Turn l

--- a/index.html
+++ b/index.html
@@ -150,11 +150,15 @@ var courses = {
     [
      { // 1:
       "footwork"   : [ "Inside Turn", "https://photos.google.com/photo/AF1QipMivqtifJhCjNi2F0clDv5sJnWD223DS3ZygBDx"], //https://photos.google.com/photo/AF1QipOX33qvXhmjo8BJxaAoG11WDMBZC2mslSoMXNNA https://photos.google.com/photo/AF1QipO626Ra8XV118wb-9oMoUeQYM-pySMJ-9Fa5E7u 
-      "partnerwork": [ "Inside Turn", "https://photos.google.com/photo/AF1QipP7paD45P5kXar-Dw4UBE0iMBg7Zli97mneux6N"], //https://photos.google.com/photo/AF1QipPlefjwY6uVimZHY0AgqggRs1NWu_28TQw9GEqe https://photos.google.com/photo/AF1QipO4nPZQEy1xNbMB69ZmTQl4n_Dvqw56SvSzZJC7
+      "partnerwork": [ "Inside Turn", "https://photos.google.com/photo/AF1QipMQAvMi3ueey9_Ls78rgkVzLR34poJBNAN6QBUV"], //https://photos.google.com/photo/AF1QipPlefjwY6uVimZHY0AgqggRs1NWu_28TQw9GEqe https://photos.google.com/photo/AF1QipO4nPZQEy1xNbMB69ZmTQl4n_Dvqw56SvSzZJC7
      },
      { // 2:
       "footwork"   : [ "Inside Turn", "https://photos.google.com/photo/AF1QipPPKWaqC3vsSniyfNOYVeh1tE-p5fpjko2rspqt"], //https://photos.google.com/photo/AF1QipMQAvMi3ueey9_Ls78rgkVzLR34poJBNAN6QBUV
       "partnerwork": [ "Shoulder out", "https://photos.google.com/photo/AF1QipNSNa1xr0lWVglgB-reaXYxyOuJ0Z9A7alcprPi"],
+     },
+     { // 3:
+      "footwork"   : [ "", ""],
+      "partnerwork": [ "Sedenta", "https://photos.google.com/photo/AF1QipP7paD45P5kXar-Dw4UBE0iMBg7Zli97mneux6N"],
      },
      { // 3:
       "footwork"   : [ "Outside Turn", ""],
@@ -308,7 +312,7 @@ var courses = {
       { // Foorwork on-2 (Panagiotis) :
       "footwork"   : [ "Foorwork on-2 2023 (Panagiotis&Myrto)", "https://photos.google.com/photo/AF1QipMjNScPgblG3UAFlpDADuw4KiTpRg29sxce4IOe"],
       "partnerwork": [ "With music", "https://photos.google.com/photo/AF1QipP698CRpTIAexQqBK_hFLG6y1fy2nFACa-FL_8l"],
-      }
+      },
       { // Basic Pachanga Workshop :
       "footwork"   : [ "Basic Pachanga Workshop", "https://photos.google.com/photo/AF1QipNkHu1Z3X9ecdE6-vSVWQq_DY1JFXnJxyCVrJ_3"],
       "partnerwork": [ "With music: Seo Fernandez - Llegò la Pachanga", "https://photos.google.com/photo/AF1QipNCTnpOS9skeNn6y8tb4vxSfmPDK7sEoTDkQkV7"],
