Fixed content and added memory

--- a/static/index.html
+++ b/static/index.html
@@ -101,7 +101,8 @@
   </div>
   <script>
 
-    function openCourse(evt, cityName) {
+    function openCourse(evt, courseName) {
+      window.localStorage.setItem('lastCourseName', courseName);
       var i, tabcontent, tablinks;
       tabcontent = document.getElementsByClassName("tabcontent");
       for (i = 0; i < tabcontent.length; i++) {
@@ -111,7 +112,7 @@
       for (i = 0; i < tablinks.length; i++) {
         tablinks[i].className = tablinks[i].className.replace(" active", "");
       }
-      document.getElementById(cityName).style.display = "block";
+      document.getElementById(courseName).style.display = "block";
       evt.currentTarget.className += " active";
     }
 
@@ -161,7 +162,11 @@
       })
 
       // Get the element with id="defaultOpen" and click on it
-      document.getElementById("Basic 1 Tab").click();
+      var lastCourse = window.localStorage.getItem('lastCourseName');
+      if (typeof(lastCourse) == "undefined") {
+        lastCourse = "Basic 1";
+       }
+       document.getElementById(lastCourse + " Tab").click();
     }
 
     requirejs.config({
