Added title and content

--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>🎵🕺 SALSA 💃🎵 </title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script src="https://unpkg.com/js-yaml@4.1.0/dist/js-yaml.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>
